parser.output
Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Classes Class
    3        | Class

    4 Class: T_ID '{' Members Methods '}'
    5      | T_ID T_EXTENDS T_ID '{' Members Methods '}'

    6 Members: Members Member
    7        | %empty

    8 Member: type idList ';'

    9 Methods: Method Methods
   10        | %empty

   11 Method: T_ID '(' Parameters ')' T_ARROW ReturnType '{' Body '}'
   12       | T_ID '(' ')' T_ARROW ReturnType '{' Body '}'

   13 Parameters: Parameters ',' Parameter
   14           | Parameter

   15 Parameter: type T_ID

   16 Body: Declarations Statements ReturnStatement

   17 Declarations: Declarations Declaration ';'
   18             | %empty

   19 Declaration: type idList

   20 StatementList: Statement Statements

   21 Statements: Statement Statements
   22           | %empty

   23 Statement: Assignment ';'
   24          | MethodCall ';'
   25          | IfElse
   26          | While
   27          | doWhile ';'
   28          | Print ';'

   29 ReturnStatement: T_RETURN Expression ';'
   30                | %empty

   31 idList: T_ID ',' idList
   32       | T_ID

   33 Assignment: T_ID '=' Expression
   34           | T_ID '.' T_ID '=' Expression

   35 MethodCall: T_ID '(' Arguments ')'
   36           | T_ID '.' T_ID '(' Arguments ')'

   37 IfElse: T_IF Expression '{' StatementList '}'
   38       | T_IF Expression '{' StatementList '}' T_ELSE '{' StatementList '}'

   39 While: T_WHILE Expression '{' StatementList '}'

   40 doWhile: T_DO '{' Statements '}' T_WHILE '(' Expression ')'

   41 Print: T_PRINT Expression

   42 type: T_ID
   43     | T_BOOLEAN
   44     | T_INTEGER

   45 ReturnType: T_ID
   46           | T_BOOLEAN
   47           | T_INTEGER
   48           | T_NONE

   49 Expression: Expression '+' Expression
   50           | Expression '-' Expression
   51           | Expression '*' Expression
   52           | Expression '/' Expression
   53           | Expression '>' Expression
   54           | Expression T_GTET Expression
   55           | Expression T_AND Expression
   56           | Expression T_OR Expression
   57           | Expression T_EQUALS Expression
   58           | T_NOT Expression
   59           | '-' Expression
   60           | T_ID
   61           | T_ID '.' T_ID
   62           | MethodCall
   63           | '(' Expression ')'
   64           | T_LITERAL
   65           | T_TRUE
   66           | T_FALSE
   67           | T_NEW T_ID
   68           | T_NEW T_ID '(' Arguments ')'

   69 Arguments: ArgumentList
   70          | %empty

   71 ArgumentList: Argument ',' ArgumentList
   72             | Argument

   73 Argument: Expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 12 35 36 40 63 68
')' (41) 11 12 35 36 40 63 68
'*' (42) 51
'+' (43) 49
',' (44) 13 31 71
'-' (45) 50 59
'.' (46) 34 36 61
'/' (47) 52
';' (59) 8 17 23 24 27 28 29
'=' (61) 33 34
'>' (62) 53
'{' (123) 4 5 11 12 37 38 39 40
'}' (125) 4 5 11 12 37 38 39 40
error (256)
T_PRINT (258) 41
T_RETURN (259) 29
T_IF (260) 37 38
T_ELSE (261) 38
T_WHILE (262) 39 40
T_NEW (263) 67 68
T_INTEGER (264) 44 47
T_BOOLEAN (265) 43 46
T_NONE (266) 48
T_EQUALS (267) 57
T_AND (268) 55
T_OR (269) 56
T_NOT (270) 58
T_UNARYMINUS (271)
T_TRUE (272) 65
T_FALSE (273) 66
T_LITERAL (274) 64
T_EXTENDS (275) 5
T_DO (276) 40
T_ARROW (277) 11 12
T_GTET (278) 54
T_ID (279) 4 5 11 12 15 31 32 33 34 35 36 42 45 60 61 67 68


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Start (39)
    on left: 1, on right: 0
Classes (40)
    on left: 2 3, on right: 1 2
Class (41)
    on left: 4 5, on right: 2 3
Members (42)
    on left: 6 7, on right: 4 5 6
Member (43)
    on left: 8, on right: 6
Methods (44)
    on left: 9 10, on right: 4 5 9
Method (45)
    on left: 11 12, on right: 9
Parameters (46)
    on left: 13 14, on right: 11 13
Parameter (47)
    on left: 15, on right: 13 14
Body (48)
    on left: 16, on right: 11 12
Declarations (49)
    on left: 17 18, on right: 16 17
Declaration (50)
    on left: 19, on right: 17
StatementList (51)
    on left: 20, on right: 37 38 39
Statements (52)
    on left: 21 22, on right: 16 20 21 40
Statement (53)
    on left: 23 24 25 26 27 28, on right: 20 21
ReturnStatement (54)
    on left: 29 30, on right: 16
idList (55)
    on left: 31 32, on right: 8 19 31
Assignment (56)
    on left: 33 34, on right: 23
MethodCall (57)
    on left: 35 36, on right: 24 62
IfElse (58)
    on left: 37 38, on right: 25
While (59)
    on left: 39, on right: 26
doWhile (60)
    on left: 40, on right: 27
Print (61)
    on left: 41, on right: 28
type (62)
    on left: 42 43 44, on right: 8 15 19
ReturnType (63)
    on left: 45 46 47 48, on right: 11 12
Expression (64)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68, on right: 29 33 34 37 38 39 40 41 49 50 51 52 53 54 55 56
    57 58 59 63 73
Arguments (65)
    on left: 69 70, on right: 35 36 68
ArgumentList (66)
    on left: 71 72, on right: 69 71
Argument (67)
    on left: 73, on right: 71 72


State 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


State 1

    4 Class: T_ID . '{' Members Methods '}'
    5      | T_ID . T_EXTENDS T_ID '{' Members Methods '}'

    T_EXTENDS  shift, and go to state 5
    '{'        shift, and go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: Classes .
    2 Classes: Classes . Class

    T_ID  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class  go to state 8


State 4

    3 Classes: Class .

    $default  reduce using rule 3 (Classes)


State 5

    5 Class: T_ID T_EXTENDS . T_ID '{' Members Methods '}'

    T_ID  shift, and go to state 9


State 6

    4 Class: T_ID '{' . Members Methods '}'

    $default  reduce using rule 7 (Members)

    Members  go to state 10


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    2 Classes: Classes Class .

    $default  reduce using rule 2 (Classes)


State 9

    5 Class: T_ID T_EXTENDS T_ID . '{' Members Methods '}'

    '{'  shift, and go to state 11


State 10

    4 Class: T_ID '{' Members . Methods '}'
    6 Members: Members . Member

    T_INTEGER  shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_ID       shift, and go to state 14

    $default  reduce using rule 10 (Methods)

    Member   go to state 15
    Methods  go to state 16
    Method   go to state 17
    type     go to state 18


State 11

    5 Class: T_ID T_EXTENDS T_ID '{' . Members Methods '}'

    $default  reduce using rule 7 (Members)

    Members  go to state 19


State 12

   44 type: T_INTEGER .

    $default  reduce using rule 44 (type)


State 13

   43 type: T_BOOLEAN .

    $default  reduce using rule 43 (type)


State 14

   11 Method: T_ID . '(' Parameters ')' T_ARROW ReturnType '{' Body '}'
   12       | T_ID . '(' ')' T_ARROW ReturnType '{' Body '}'
   42 type: T_ID .

    '('  shift, and go to state 20

    $default  reduce using rule 42 (type)


State 15

    6 Members: Members Member .

    $default  reduce using rule 6 (Members)


State 16

    4 Class: T_ID '{' Members Methods . '}'

    '}'  shift, and go to state 21


State 17

    9 Methods: Method . Methods

    T_ID  shift, and go to state 22

    $default  reduce using rule 10 (Methods)

    Methods  go to state 23
    Method   go to state 17


State 18

    8 Member: type . idList ';'

    T_ID  shift, and go to state 24

    idList  go to state 25


State 19

    5 Class: T_ID T_EXTENDS T_ID '{' Members . Methods '}'
    6 Members: Members . Member

    T_INTEGER  shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_ID       shift, and go to state 14

    $default  reduce using rule 10 (Methods)

    Member   go to state 15
    Methods  go to state 26
    Method   go to state 17
    type     go to state 18


State 20

   11 Method: T_ID '(' . Parameters ')' T_ARROW ReturnType '{' Body '}'
   12       | T_ID '(' . ')' T_ARROW ReturnType '{' Body '}'

    T_INTEGER  shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_ID       shift, and go to state 27
    ')'        shift, and go to state 28

    Parameters  go to state 29
    Parameter   go to state 30
    type        go to state 31


State 21

    4 Class: T_ID '{' Members Methods '}' .

    $default  reduce using rule 4 (Class)


State 22

   11 Method: T_ID . '(' Parameters ')' T_ARROW ReturnType '{' Body '}'
   12       | T_ID . '(' ')' T_ARROW ReturnType '{' Body '}'

    '('  shift, and go to state 20


State 23

    9 Methods: Method Methods .

    $default  reduce using rule 9 (Methods)


State 24

   31 idList: T_ID . ',' idList
   32       | T_ID .

    ','  shift, and go to state 32

    $default  reduce using rule 32 (idList)


State 25

    8 Member: type idList . ';'

    ';'  shift, and go to state 33


State 26

    5 Class: T_ID T_EXTENDS T_ID '{' Members Methods . '}'

    '}'  shift, and go to state 34


State 27

   42 type: T_ID .

    $default  reduce using rule 42 (type)


State 28

   12 Method: T_ID '(' ')' . T_ARROW ReturnType '{' Body '}'

    T_ARROW  shift, and go to state 35


State 29

   11 Method: T_ID '(' Parameters . ')' T_ARROW ReturnType '{' Body '}'
   13 Parameters: Parameters . ',' Parameter

    ')'  shift, and go to state 36
    ','  shift, and go to state 37


State 30

   14 Parameters: Parameter .

    $default  reduce using rule 14 (Parameters)


State 31

   15 Parameter: type . T_ID

    T_ID  shift, and go to state 38


State 32

   31 idList: T_ID ',' . idList

    T_ID  shift, and go to state 24

    idList  go to state 39


State 33

    8 Member: type idList ';' .

    $default  reduce using rule 8 (Member)


State 34

    5 Class: T_ID T_EXTENDS T_ID '{' Members Methods '}' .

    $default  reduce using rule 5 (Class)


State 35

   12 Method: T_ID '(' ')' T_ARROW . ReturnType '{' Body '}'

    T_INTEGER  shift, and go to state 40
    T_BOOLEAN  shift, and go to state 41
    T_NONE     shift, and go to state 42
    T_ID       shift, and go to state 43

    ReturnType  go to state 44


State 36

   11 Method: T_ID '(' Parameters ')' . T_ARROW ReturnType '{' Body '}'

    T_ARROW  shift, and go to state 45


State 37

   13 Parameters: Parameters ',' . Parameter

    T_INTEGER  shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_ID       shift, and go to state 27

    Parameter  go to state 46
    type       go to state 31


State 38

   15 Parameter: type T_ID .

    $default  reduce using rule 15 (Parameter)


State 39

   31 idList: T_ID ',' idList .

    $default  reduce using rule 31 (idList)


State 40

   47 ReturnType: T_INTEGER .

    $default  reduce using rule 47 (ReturnType)


State 41

   46 ReturnType: T_BOOLEAN .

    $default  reduce using rule 46 (ReturnType)


State 42

   48 ReturnType: T_NONE .

    $default  reduce using rule 48 (ReturnType)


State 43

   45 ReturnType: T_ID .

    $default  reduce using rule 45 (ReturnType)


State 44

   12 Method: T_ID '(' ')' T_ARROW ReturnType . '{' Body '}'

    '{'  shift, and go to state 47


State 45

   11 Method: T_ID '(' Parameters ')' T_ARROW . ReturnType '{' Body '}'

    T_INTEGER  shift, and go to state 40
    T_BOOLEAN  shift, and go to state 41
    T_NONE     shift, and go to state 42
    T_ID       shift, and go to state 43

    ReturnType  go to state 48


State 46

   13 Parameters: Parameters ',' Parameter .

    $default  reduce using rule 13 (Parameters)


State 47

   12 Method: T_ID '(' ')' T_ARROW ReturnType '{' . Body '}'

    $default  reduce using rule 18 (Declarations)

    Body          go to state 49
    Declarations  go to state 50


State 48

   11 Method: T_ID '(' Parameters ')' T_ARROW ReturnType . '{' Body '}'

    '{'  shift, and go to state 51


State 49

   12 Method: T_ID '(' ')' T_ARROW ReturnType '{' Body . '}'

    '}'  shift, and go to state 52


State 50

   16 Body: Declarations . Statements ReturnStatement
   17 Declarations: Declarations . Declaration ';'

    T_PRINT    shift, and go to state 53
    T_IF       shift, and go to state 54
    T_WHILE    shift, and go to state 55
    T_INTEGER  shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_DO       shift, and go to state 56
    T_ID       shift, and go to state 57

    $default  reduce using rule 22 (Statements)

    Declaration  go to state 58
    Statements   go to state 59
    Statement    go to state 60
    Assignment   go to state 61
    MethodCall   go to state 62
    IfElse       go to state 63
    While        go to state 64
    doWhile      go to state 65
    Print        go to state 66
    type         go to state 67


State 51

   11 Method: T_ID '(' Parameters ')' T_ARROW ReturnType '{' . Body '}'

    $default  reduce using rule 18 (Declarations)

    Body          go to state 68
    Declarations  go to state 50


State 52

   12 Method: T_ID '(' ')' T_ARROW ReturnType '{' Body '}' .

    $default  reduce using rule 12 (Method)


State 53

   41 Print: T_PRINT . Expression

    T_NEW      shift, and go to state 69
    T_NOT      shift, and go to state 70
    T_TRUE     shift, and go to state 71
    T_FALSE    shift, and go to state 72
    T_LITERAL  shift, and go to state 73
    T_ID       shift, and go to state 74
    '-'        shift, and go to state 75
    '('        shift, and go to state 76

    MethodCall  go to state 77
    Expression  go to state 78


State 54

   37 IfElse: T_IF . Expression '{' StatementList '}'
   38       | T_IF . Expression '{' StatementList '}' T_ELSE '{' StatementList '}'

    T_NEW      shift, and go to state 69
    T_NOT      shift, and go to state 70
    T_TRUE     shift, and go to state 71
    T_FALSE    shift, and go to state 72
    T_LITERAL  shift, and go to state 73
    T_ID       shift, and go to state 74
    '-'        shift, and go to state 75
    '('        shift, and go to state 76

    MethodCall  go to state 77
    Expression  go to state 79


State 55

   39 While: T_WHILE . Expression '{' StatementList '}'

    T_NEW      shift, and go to state 69
    T_NOT      shift, and go to state 70
    T_TRUE     shift, and go to state 71
    T_FALSE    shift, and go to state 72
    T_LITERAL  shift, and go to state 73
    T_ID       shift, and go to state 74
    '-'        shift, and go to state 75
    '('        shift, and go to state 76

    MethodCall  go to state 77
    Expression  go to state 80


State 56

   40 doWhile: T_DO . '{' Statements '}' T_WHILE '(' Expression ')'

    '{'  shift, and go to state 81


State 57

   33 Assignment: T_ID . '=' Expression
   34           | T_ID . '.' T_ID '=' Expression
   35 MethodCall: T_ID . '(' Arguments ')'
   36           | T_ID . '.' T_ID '(' Arguments ')'
   42 type: T_ID .

    '('  shift, and go to state 82
    '='  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 42 (type)


State 58

   17 Declarations: Declarations Declaration . ';'

    ';'  shift, and go to state 85


State 59

   16 Body: Declarations Statements . ReturnStatement

    T_RETURN  shift, and go to state 86

    $default  reduce using rule 30 (ReturnStatement)

    ReturnStatement  go to state 87


State 60

   21 Statements: Statement . Statements

    T_PRINT  shift, and go to state 53
    T_IF     shift, and go to state 54
    T_WHILE  shift, and go to state 55
    T_DO     shift, and go to state 56
    T_ID     shift, and go to state 88

    $default  reduce using rule 22 (Statements)

    Statements  go to state 89
    Statement   go to state 60
    Assignment  go to state 61
    MethodCall  go to state 62
    IfElse      go to state 63
    While       go to state 64
    doWhile     go to state 65
    Print       go to state 66


State 61

   23 Statement: Assignment . ';'

    ';'  shift, and go to state 90


State 62

   24 Statement: MethodCall . ';'

    ';'  shift, and go to state 91


State 63

   25 Statement: IfElse .

    $default  reduce using rule 25 (Statement)


State 64

   26 Statement: While .

    $default  reduce using rule 26 (Statement)


State 65

   27 Statement: doWhile . ';'

    ';'  shift, and go to state 92


State 66

   28 Statement: Print . ';'

    ';'  shift, and go to state 93


State 67

   19 Declaration: type . idList

    T_ID  shift, and go to state 24

    idList  go to state 94


State 68

   11 Method: T_ID '(' Parameters ')' T_ARROW ReturnType '{' Body . '}'

    '}'  shift, and go to state 95


State 69

   67 Expression: T_NEW . T_ID
   68           | T_NEW . T_ID '(' Arguments ')'

    T_ID  shift, and go to state 96


State 70

   58 Expression: T_NOT . Expression

    T_NEW      shift, and go to state 69
    T_NOT      shift, and go to state 70
    T_TRUE     shift, and go to state 71
    T_FALSE    shift, and go to state 72
    T_LITERAL  shift, and go to state 73
    T_ID       shift, and go to state 74
    '-'        shift, and go to state 75
    '('        shift, and go to state 76

    MethodCall  go to state 77
    Expression  go to state 97


State 71

   65 Expression: T_TRUE .

    $default  reduce using rule 65 (Expression)


State 72

   66 Expression: T_FALSE .

    $default  reduce using rule 66 (Expression)


State 73

   64 Expression: T_LITERAL .

    $default  reduce using rule 64 (Expression)


State 74

   35 MethodCall: T_ID . '(' Arguments ')'
   36           | T_ID . '.' T_ID '(' Arguments ')'
   60 Expression: T_ID .
   61           | T_ID . '.' T_ID

    '('  shift, and go to state 82
    '.'  shift, and go to state 98

    $default  reduce using rule 60 (Expression)


State 75

   59 Expression: '-' . Expression

    T_NEW      shift, and go to state 69
    T_NOT      shift, and go to state 70
    T_TRUE     shift, and go to state 71
    T_FALSE    shift, and go to state 72
    T_LITERAL  shift, and go to state 73
    T_ID       shift, and go to state 74
    '-'        shift, and go to state 75
    '('        shift, and go to state 76

    MethodCall  go to state 77
    Expression  go to state 99


State 76

   63 Expression: '(' . Expression ')'

    T_NEW      shift, and go to state 69
    T_NOT      shift, and go to state 70
    T_TRUE     shift, and go to state 71
    T_FALSE    shift, and go to state 72
    T_LITERAL  shift, and go to state 73
    T_ID       shift, and go to state 74
    '-'        shift, and go to state 75
    '('        shift, and go to state 76

    MethodCall  go to state 77
    Expression  go to state 100


State 77

   62 Expression: MethodCall .

    $default  reduce using rule 62 (Expression)


State 78

   41 Print: T_PRINT Expression .
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '>' Expression
   54           | Expression . T_GTET Expression
   55           | Expression . T_AND Expression
   56           | Expression . T_OR Expression
   57           | Expression . T_EQUALS Expression

    T_EQUALS  shift, and go to state 101
    T_AND     shift, and go to state 102
    T_OR      shift, and go to state 103
    T_GTET    shift, and go to state 104
    '>'       shift, and go to state 105
    '+'       shift, and go to state 106
    '-'       shift, and go to state 107
    '*'       shift, and go to state 108
    '/'       shift, and go to state 109

    $default  reduce using rule 41 (Print)


State 79

   37 IfElse: T_IF Expression . '{' StatementList '}'
   38       | T_IF Expression . '{' StatementList '}' T_ELSE '{' StatementList '}'
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '>' Expression
   54           | Expression . T_GTET Expression
   55           | Expression . T_AND Expression
   56           | Expression . T_OR Expression
   57           | Expression . T_EQUALS Expression

    T_EQUALS  shift, and go to state 101
    T_AND     shift, and go to state 102
    T_OR      shift, and go to state 103
    T_GTET    shift, and go to state 104
    '>'       shift, and go to state 105
    '+'       shift, and go to state 106
    '-'       shift, and go to state 107
    '*'       shift, and go to state 108
    '/'       shift, and go to state 109
    '{'       shift, and go to state 110


State 80

   39 While: T_WHILE Expression . '{' StatementList '}'
   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '>' Expression
   54           | Expression . T_GTET Expression
   55           | Expression . T_AND Expression
   56           | Expression . T_OR Expression
   57           | Expression . T_EQUALS Expression

    T_EQUALS  shift, and go to state 101
    T_AND     shift, and go to state 102
    T_OR      shift, and go to state 103
    T_GTET    shift, and go to state 104
    '>'       shift, and go to state 105
    '+'       shift, and go to state 106
    '-'       shift, and go to state 107
    '*'       shift, and go to state 108
    '/'       shift, and go to state 109
    '{'       shift, and go to state 111


State 81

   40 doWhile: T_DO '{' . Statements '}' T_WHILE '(' Expression ')'

    T_PRINT  shift, and go to state 53
    T_IF     shift, and go to state 54
    T_WHILE  shift, and go to state 55
    T_DO     shift, and go to state 56
    T_ID     shift, and go to state 88

    $default  reduce using rule 22 (Statements)

    Statements  go to state 112
    Statement   go to state 60
    Assignment  go to state 61
    MethodCall  go to state 62
    IfElse      go to state 63
    While       go to state 64
    doWhile     go to state 65
    Print       go to state 66


State 82

   35 MethodCall: T_ID '(' . Arguments ')'

    T_NEW      shift, and go to state 69
    T_NOT      shift, and go to state 70
    T_TRUE     shift, and go to state 71
    T_FALSE    shift, and go to state 72
    T_LITERAL  shift, and go to state 73
    T_ID       shift, and go to state 74
    '-'        shift, and go to state 75
    '('        shift, and go to state 76

    $default  reduce using rule 70 (Arguments)

    MethodCall    go to state 77
    Expression    go to state 113
    Arguments     go to state 114
    ArgumentList  go to state 115
    Argument      go to state 116


State 83

   33 Assignment: T_ID '=' . Expression

    T_NEW      shift, and go to state 69
    T_NOT      shift, and go to state 70
    T_TRUE     shift, and go to state 71
    T_FALSE    shift, and go to state 72
    T_LITERAL  shift, and go to state 73
    T_ID       shift, and go to state 74
    '-'        shift, and go to state 75
    '('        shift, and go to state 76

    MethodCall  go to state 77
    Expression  go to state 117


State 84

   34 Assignment: T_ID '.' . T_ID '=' Expression
   36 MethodCall: T_ID '.' . T_ID '(' Arguments ')'

    T_ID  shift, and go to state 118


State 85

   17 Declarations: Declarations Declaration ';' .

    $default  reduce using rule 17 (Declarations)


State 86

   29 ReturnStatement: T_RETURN . Expression ';'

    T_NEW      shift, and go to state 69
    T_NOT      shift, and go to state 70
    T_TRUE     shift, and go to state 71
    T_FALSE    shift, and go to state 72
    T_LITERAL  shift, and go to state 73
    T_ID       shift, and go to state 74
    '-'        shift, and go to state 75
    '('        shift, and go to state 76

    MethodCall  go to state 77
    Expression  go to state 119


State 87

   16 Body: Declarations Statements ReturnStatement .

    $default  reduce using rule 16 (Body)


State 88

   33 Assignment: T_ID . '=' Expression
   34           | T_ID . '.' T_ID '=' Expression
   35 MethodCall: T_ID . '(' Arguments ')'
   36           | T_ID . '.' T_ID '(' Arguments ')'

    '('  shift, and go to state 82
    '='  shift, and go to state 83
    '.'  shift, and go to state 84


State 89

   21 Statements: Statement Statements .

    $default  reduce using rule 21 (Statements)


State 90

   23 Statement: Assignment ';' .

    $default  reduce using rule 23 (Statement)


State 91

   24 Statement: MethodCall ';' .

    $default  reduce using rule 24 (Statement)


State 92

   27 Statement: doWhile ';' .

    $default  reduce using rule 27 (Statement)


State 93

   28 Statement: Print ';' .

    $default  reduce using rule 28 (Statement)


State 94

   19 Declaration: type idList .

    $default  reduce using rule 19 (Declaration)


State 95

   11 Method: T_ID '(' Parameters ')' T_ARROW ReturnType '{' Body '}' .

    $default  reduce using rule 11 (Method)


State 96

   67 Expression: T_NEW T_ID .
   68           | T_NEW T_ID . '(' Arguments ')'

    '('  shift, and go to state 120

    $default  reduce using rule 67 (Expression)


State 97

   49 Expression: Expression . '+' Expression
   50           | Expression . '-' Expression
   51           | Expression . '*' Expression
   52           | Expression . '/' Expression
   53           | Expression . '>' Expression
   54           | Expression . T_GTET Expression
   55           | Expression . T_AND Expression
   56           | Expression . T_OR Expression
   57           | Expression . T_EQUALS Expression
   58           | T_NOT Expression .

    $default  reduce using rule 58 (Expression)


State 98

   36 MethodCall: T_ID '.' . T_ID '(' Arguments ')'
   61 Expression: T_ID '.' . T_ID

    T_ID  shift, and go to state 121


State 99
